--- a/content/posters/2023/Q4/Group 36/group_info.yaml
+++ b/content/posters/2023/Q4/Group 36/group_info.yaml
@@ -1,6 +1,7 @@
-projectTitle: 
+projectTitle: OneStop Code Shop Assistance for All Languages
 year: 2023
 supervisors:
-  - 
-  - 
+  - Arie van Deursen
+  - Maliheh Izadi
+  - Jonathan Katzy
 quarter: 4
