Update Group 44 files.

--- a/content/posters/2023/Q4/Group 44/students/Kendra Sartori/student_info.yaml
+++ b/content/posters/2023/Q4/Group 44/students/Kendra Sartori/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Discovering the topics of Continuous Integration projects on GitHub
+thesisTitle: 'Discovering the metrics for assessing a project’s maturity: An analysis of key indicators of maturity'
 paperUrl: 'http://resolver.tudelft.nl/uuid:14b43b01-514d-46a6-bf3f-0a4251b5817e'
 firstName: Kendra
 lastName: Sartori
