--- a/content/posters/2023/Q4/Group 36/students/Razvan Popescu/student_info.yaml
+++ b/content/posters/2023/Q4/Group 36/students/Razvan Popescu/student_info.yaml
@@ -1,5 +1,5 @@
 firstName: Razvan Mihai
 lastName: Popescu
-thesisTitle: A Study on the Impact of Common Code Structures on CodeParrot’s Autocompletion Performance
-paperUrl: https://repository.tudelft.nl/islandora/object/uuid:7373bcbe-1722-4bf2-a4b3-3c8bfbf3065c?collection=education
-repositoryUrl: https://github.com/AISE-TUDelft/CodeShop/tree/code_parrot
+thesisTitle: 'A Study on the Impact of Common Code Structures on CodeParrot’s Autocompletion Performance'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:7373bcbe-1722-4bf2-a4b3-3c8bfbf3065c?collection=education'
+repositoryUrl: 'https://github.com/AISE-TUDelft/CodeShop/tree/code_parrot'
