Update Group 6 files
fix typo in project yaml

--- a/content/posters/2023/Q4/Group 6/group_info.yaml
+++ b/content/posters/2023/Q4/Group 6/group_info.yaml
@@ -1,5 +1,4 @@
-projectTitle: >-
-  Cultural Differences and Similarities in Perceptions of Artificial Social Agents (ASAs)
+projectTitle: Cultural Differences and Similarities in Perceptions of Artificial Social Agents (ASAs)
 year: 2023
 supervisors:
   - Willem-Paul Brinkman
