--- a/content/posters/2023/Q4/Group 13/students/Joris Rijsdijk/student_info.yaml
+++ b/content/posters/2023/Q4/Group 13/students/Joris Rijsdijk/student_info.yaml
@@ -2,3 +2,4 @@ thesisTitle: Exploring the Impact of a Procedurally Generated Environment on Imm
 paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:b2bcf835-240d-420e-b2f3-79aa433dbc21?collection=education'
 firstName: Joris
 lastName: Rijsdijk
+repositoryUrl: ''
