Add Group 50 files

--- a/content/posters/2023/Q4/Group 50/group_info.yaml
+++ b/content/posters/2023/Q4/Group 50/group_info.yaml
@@ -1,6 +1,6 @@
-projectTitle: "Comparing planners for rail planning"
+projectTitle: Comparing planners for rail planning
 year: 2023
 supervisors:
-  - "Issa K. Hanou"
-  - "Sabastijan Dumancic"
+  - Issa K. Hanou
+  - Sabastijan Dumancic
 quarter: 2
