--- a/content/posters/2023/Q4/Group 50/students/Bozhidar Andonov/student_info.yaml
+++ b/content/posters/2023/Q4/Group 50/students/Bozhidar Andonov/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Utilizing General Planners to Solve the Train Unit Shunting Problem Extended with Servicing'
+thesisTitle: Utilizing General Planners to Solve the Train Unit Shunting Problem Extended with Servicing
 paperUrl: 'http://resolver.tudelft.nl/uuid:ebbcf98a-0a4b-41d0-b110-d145a2be0f2a'
-firstName: 'Bozhidar'
-lastName: 'Andonov'
+firstName: Bozhidar
+lastName: Andonov
 repositoryUrl: 'https://github.com/cakasa/rail-planning/tree/master/servicing'
