--- a/content/posters/2023/Q4/Group 50/students/Mees Gribnau/student_info.yaml
+++ b/content/posters/2023/Q4/Group 50/students/Mees Gribnau/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: "Dealing with conflicting trains"
-paperUrl: "http://resolver.tudelft.nl/uuid:0d5e2fca-247a-4e94-bde4-d39a6818daed"
-firstName: "Mees"
-lastName: "Gribnau"
-repositoryUrl: ''https://github.com/cakasa/rail-planning/tree/master/conflicts"
+thesisTitle: Dealing with conflicting trains
+paperUrl: 'http://resolver.tudelft.nl/uuid:0d5e2fca-247a-4e94-bde4-d39a6818daed'
+firstName: Mees
+lastName: Gribnau
+repositoryUrl: 'https://github.com/cakasa/rail-planning/tree/master/conflicts'
