--- a/content/posters/2023/Q4/Group 50/students/Tim Tian/student_info.yaml
+++ b/content/posters/2023/Q4/Group 50/students/Tim Tian/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: "Comparing planners for rail planning in PDDL"
-paperUrl: "http://resolver.tudelft.nl/uuid:1dfdef8d-d36a-43de-9688-07609ea7f6f5"
-firstName: "Tim"
-lastName: "Tian"
-repositoryUrl: ''https://github.com/cakasa/rail-planning/tree/master/Multiple%20Shunting%20yards"
+thesisTitle: Comparing planners for rail planning in PDDL
+paperUrl: 'http://resolver.tudelft.nl/uuid:1dfdef8d-d36a-43de-9688-07609ea7f6f5'
+firstName: Tim
+lastName: Tian
+repositoryUrl: 'https://github.com/cakasa/rail-planning/tree/master/Multiple%20Shunting%20yards'
