Update Group 14 files.

--- a/content/posters/2023/Q4/Group 14/students/Alexandra Maria Marcu/student_info.yaml
+++ b/content/posters/2023/Q4/Group 14/students/Alexandra Maria Marcu/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: The Influence of Interdependence Relationships on Trust Repair Strategies and Collaboration Fluency
+thesisTitle: The Influence of Interdependence on Trust Repair and Fluency
 paperUrl: 'http://resolver.tudelft.nl/uuid:ec8c9401-24af-44c9-92b1-436d002c353d'
 firstName: Alexandra Maria
 lastName: Marcu
