--- a/content/posters/2023/Q4/Group 14/students/Kanta Tanahashi/student_info.yaml
+++ b/content/posters/2023/Q4/Group 14/students/Kanta Tanahashi/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Impact of Opportunistic Interdependence Relationship on Trust Violation, Trust Repair, and on Collaboration Fluency in a Human-Agent Team
+thesisTitle: Agent Failure, Trust Repair, and Fluency in Human-AI Teams
 paperUrl: 'http://resolver.tudelft.nl/uuid:d6bf7e79-8768-4c02-9c74-cd1f63d16ac7'
 firstName: Kanta
 lastName: Tanahashi
