--- a/content/posters/2023/Q4/Group 56/students/Andreea Mocanu/student_info.yaml
+++ b/content/posters/2023/Q4/Group 56/students/Andreea Mocanu/student_info.yaml
@@ -2,3 +2,4 @@ thesisTitle: Building type checkers using scope graphs for a language with type 
 paperUrl: 'http://resolver.tudelft.nl/uuid:64aa6cc8-9039-47b1-99f6-decf150dcab8'
 firstName: Andreea
 lastName: Mocanu
+repositoryUrl: 'https://github.com/andreealmocanu/scope-graph-type-class'
