--- a/content/posters/2023/Q4/Group 19/students/Andrei Manastireanu/student_info.yaml
+++ b/content/posters/2023/Q4/Group 19/students/Andrei Manastireanu/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Automatic Feature Discovery: A comparative study between filter and wrapper feature selection techniques'
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:a4ac9242-e8c7-4e92-a281-cc5e53cebe28?collection=education'
+thesisTitle: "Automatic Feature Discovery: A comparative study between filter and wrapper feature selection techniques"
+paperUrl: "http://resolver.tudelft.nl/uuid:a4ac9242-e8c7-4e92-a281-cc5e53cebe28"
 firstName: Andrei
 lastName: Manastireanu
-repositoryUrl: 'https://github.com/delftdata/bsc_research_project_q4_2023'
+repositoryUrl: "https://github.com/delftdata/bsc_research_project_q4_2023"
