--- a/content/posters/2023/Q4/Group 19/students/Florena Buse/student_info.yaml
+++ b/content/posters/2023/Q4/Group 19/students/Florena Buse/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Data-Driven Empirical Analysis of Correlation-Based Feature Selection Techniques'
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:ea4b4691-bf10-4f93-b8d0-200ff2a12dec?collection=education'
+thesisTitle: "Data-Driven Empirical Analysis of Correlation-Based Feature Selection Techniques"
+paperUrl: "http://resolver.tudelft.nl/uuid:ea4b4691-bf10-4f93-b8d0-200ff2a12dec"
 firstName: Florena
 lastName: Buse
-repositoryUrl: 'https://github.com/delftdata/bsc_research_project_q4_2023'
+repositoryUrl: "https://github.com/delftdata/bsc_research_project_q4_2023"
