--- a/content/posters/2023/Q4/Group 19/students/Andrei Udila/student_info.yaml
+++ b/content/posters/2023/Q4/Group 19/students/Andrei Udila/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Encoding Methods for Categorical Data: A Comparative Analysis for Linear Models, Decision Trees, and Support Vector Machines'
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:10b91b99-2685-4a45-b44e-48fbbf808ce2?collection=education'
+thesisTitle: "Encoding Methods for Categorical Data: A Comparative Analysis for Linear Models, Decision Trees, and Support Vector Machines"
+paperUrl: "http://resolver.tudelft.nl/uuid:10b91b99-2685-4a45-b44e-48fbbf808ce2"
 firstName: Andrei
 lastName: Udila
-repositoryUrl: 'https://github.com/delftdata/bsc_research_project_q4_2023'
+repositoryUrl: "https://github.com/delftdata/bsc_research_project_q4_2023"
