--- a/content/posters/2023/Q4/Group 18/students/Arnav Chopra/student_info.yaml
+++ b/content/posters/2023/Q4/Group 18/students/Arnav Chopra/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'A test suite for quantum network applications: Quantifying an applications ability to benchmark a quantum network'
+thesisTitle: 'A test suite for quantum network applications: Quantifying an application`s ability to benchmark a quantum network'
 paperUrl: http://resolver.tudelft.nl/uuid:ea4e97c5-6a16-455b-b2b2-0c083d431edf
 firstName: Arnav
 lastName: Chopra
