Update Group 30 files

--- a/content/posters/2023/Q4/Group 30/students/Shayan Ramezani/student_info.yaml
+++ b/content/posters/2023/Q4/Group 30/students/Shayan Ramezani/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Replacing The Acquisition Function in Bayesian Optimization by a Neural Network
-paperUrl: 'http://resolver.tudelft.nl/uuid:6d8035dd-f425-46df-8679-dfad91f9ea8d'
+paperUrl: 'http://resolver.tudelft.nl/uuid:93f65530-308a-47ba-8b6f-5e47aa3715f3'
 firstName: Shayan
 lastName: Ramezani
-repositoryUrl: 'http://resolver.tudelft.nl/uuid:93f65530-308a-47ba-8b6f-5e47aa3715f3'
+repositoryUrl: ''
