--- a/content/posters/2023/Q4/Group 41/students/Alp Guneri/student_info.yaml
+++ b/content/posters/2023/Q4/Group 41/students/Alp Guneri/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Paper title: Augmenting Pareto Corner Search Evolutionary Algorithm for Automatic Test Case Generation'
+thesisTitle: Augmenting Pareto Corner Search Evolutionary Algorithm for Automatic Test Case Generation
 paperUrl: 'http://resolver.tudelft.nl/uuid:803b210e-2252-4436-a320-98936311d1f6'
 firstName: Alp
 lastName: Guneri
