Update Group 13 files.

--- a/content/posters/2023/Q4/Group 13/students/Ate-Jan de Vries/student_info.yaml
+++ b/content/posters/2023/Q4/Group 13/students/Ate-Jan de Vries/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Mapping hyperbolic space for the virtual reality game "Holonomy"
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Ab86007e3-cd1a-4654-8556-09430bf75a99?collection=education'
 firstName: Ate-Jan
 lastName: de Vries
 repositoryUrl: 'https://github.com/AJdeVries41/research-project'
