--- a/content/posters/2023/Q4/Group 13/students/Scott Jochems/student_info.yaml
+++ b/content/posters/2023/Q4/Group 13/students/Scott Jochems/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Mini-map positioning for Virtual Reality environments in hyperbolic space
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A9b3a815e-7366-4b08-9544-cb1ae6b78070?collection=education'
 firstName: Scott
 lastName: Jochems
 repositoryUrl: ''
