Update Group 8 files

--- a/content/posters/2024/Q2/Group 8/students/Bart van Maris/student_info.yaml
+++ b/content/posters/2024/Q2/Group 8/students/Bart van Maris/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Landmarks in Planning
+thesisTitle: Landmarks in Planning: Using landmarks as Intermediary Goals or as a Pseudo-Heuristic
 paperUrl: 'http://resolver.tudelft.nl/uuid:e8ea1f64-6640-464f-98c7-942c13333d90'
 firstName: Bart
 lastName: van Maris
