--- a/content/posters/2024/Q2/Group 8/students/Paul Tervoort/student_info.yaml
+++ b/content/posters/2024/Q2/Group 8/students/Paul Tervoort/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Reproducing the concept of ordered landmarks in planning
+thesisTitle: Reproducing the concept of ordered landmarks in planning: The effect of ordered landmarks on plan length in forward search
 paperUrl: 'http://resolver.tudelft.nl/uuid:ea22d58f-c5e5-402c-a609-f85eb41ea751'
 firstName: Paul
 lastName: Tervoort
