Fixing small mistake in the title of student

--- a/content/posters/2024/Q2/Group 6/students/Dinu Gafton/student_info.yaml
+++ b/content/posters/2024/Q2/Group 6/students/Dinu Gafton/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Learning Curve Extrapolation using Machine Learning
+thesisTitle: Prevalence of non-monotonicity in learning curves
 paperUrl: http://resolver.tudelft.nl/uuid:76dadd25-3c09-4802-b473-944616360558
 firstName: Dinu
 lastName: Gafton
