--- a/content/posters/2024/Q2/Group 5/students/Ismail Music/student_info.yaml
+++ b/content/posters/2024/Q2/Group 5/students/Ismail Music/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Long-Term Memory Retention of Educational Content: How Machine Learning concepts can be remembered for the rest of our careers with the right practice questions'
+thesisTitle: 'Long-Term Memory Retention of Educational Content'
 paperUrl: 'http://resolver.tudelft.nl/uuid:4b1ba358-509f-44e4-96cb-f768c82e21fe'
 firstName: Ismail
 lastName: Music
