--- a/content/posters/2024/Q2/Group 6/students/Pravesha S.P. Ramsundersingh/student_info.yaml
+++ b/content/posters/2024/Q2/Group 6/students/Pravesha S.P. Ramsundersingh/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Learning Curves in Machine Learning: Can patterns be identified amongst learning curves after the application of the K-Means algorithm using point and statistical vectors?'
+thesisTitle: 'Can patterns be identified amongst learning curves after the application of the K-Means algorithm using point and statistical vectors?'
 paperUrl: http://resolver.tudelft.nl/uuid:f196ff1d-8a37-466f-96a3-e2a6f83d6e5e
 firstName: Pravesha
 lastName: S.P. Ramsundersingh
