--- a/content/posters/2024/Q2/Group 8/students/Pauline Hengst/student_info.yaml
+++ b/content/posters/2024/Q2/Group 8/students/Pauline Hengst/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Exploring effectivity of Hm landmark extraction on modern planning domains: How does the Hm-Landmark extration algorithm perform on recent competition domains?
+thesisTitle: "Exploring effectivity of Hm landmark extraction on modern planning domains"
 paperUrl: ''
 firstName: Pauline
 lastName: Hengst
