--- a/content/posters/2024/Q2/Group 9/group_info.yaml
+++ b/content/posters/2024/Q2/Group 9/group_info.yaml
@@ -1,6 +1,4 @@
-projectTitle: >-
-  Finding your digital sibling: which other GitHub projects are similar to
-  yours?
+projectTitle: "Finding your digital sibling: which other GitHub projects are similar to yours?"
 year: 2024
 supervisors:
   - Sebastian Proksch
