--- a/content/posters/2023/Q2/Group 12/students/Sebastian Manda/student_info.yaml
+++ b/content/posters/2023/Q2/Group 12/students/Sebastian Manda/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Compressing 3D Trees For Faster Rendering
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A7ca6216f-2636-4c9c-85d3-f381b956870f?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:7ca6216f-2636-4c9c-85d3-f381b956870f'
 firstName: Sebastian
 lastName: Manda
 repositoryUrl: 'https://github.com/SebastianManda/tree-compression'
