Change Brents name

--- a/content/posters/2024/Q2/Group 2/students/Brent Meeusen/student_info.yaml
+++ b/content/posters/2024/Q2/Group 2/students/Brent Meeusen/student_info.yaml
@@ -1,7 +1,7 @@
 thesisTitle: 'Clustering Scratch projects by code complexity traits and project traits'
 quarter: 4
 groupNumber: 2
-firstName: Gert-Jan
-lastName: Schaap
+firstName: Brent
+lastName: Meeusen
 paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:a1873e38-fe64-4156-b64b-930b4cae9b88?collection=education'
 repositoryUrl: 'https://github.com/BrentMeeusen/CSE3000-Clustering-Scratch-Projects'
