--- a/content/posters/2024/Q2/Group 11/group_info.yaml
+++ b/content/posters/2024/Q2/Group 11/group_info.yaml
@@ -2,5 +2,6 @@ projectTitle: >-
   Synthetic data generation for the optimization of strains using generative models
 year: 2024
 supervisors:
+  - Thomas Abeel
   - Paul van Lent
 quarter: 2
