--- a/content/posters/2024/Q2/Group 12/group_info.yaml
+++ b/content/posters/2024/Q2/Group 12/group_info.yaml
@@ -1,7 +1,7 @@
 projectTitle: Procedural Tree Generation
-year: 2024
+year: 2023
 supervisors:
-  - Prof. Eiseman
+  - Elmar Eisemann
   - Petr Kellnhofer
   - Lucas Uzolas
 quarter: 2
