--- a/content/posters/2024/Q2/Group 12/students/Erfan Mozafari/student_info.yaml
+++ b/content/posters/2024/Q2/Group 12/students/Erfan Mozafari/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Inverse Modelling of 2D Trees Using Graph Convolutional Networks
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:13b5cb04-fdd8-4afe-90f2-0c02dfd5cbfc?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:13b5cb04-fdd8-4afe-90f2-0c02dfd5cbfc'
 firstName: Erfan
 lastName: Mozafari
 repositoryUrl: 'https://github.com/erfanmozafari/tree-gcns'
