--- a/content/posters/2024/Q2/Group 3/students/Dayoung Lim/student_info.yaml
+++ b/content/posters/2024/Q2/Group 3/students/Dayoung Lim/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Topic Classification of Publications
-paperUrl: 'link: http://resolver.tudelft.nl/uuid:ee36bc7a-da2a-47b2-91fd-2d428ad51c05'
+paperUrl: 'http://resolver.tudelft.nl/uuid:ee36bc7a-da2a-47b2-91fd-2d428ad51c05'
 firstName: Dayoung
 lastName: Lim
 repositoryUrl: 'https://github.com/DayoungLim/topic-classification-publications.git'
