Update Group 8 files

--- a/content/posters/2024/Q2/Group 8/students/Pauline Hengst/student_info.yaml
+++ b/content/posters/2024/Q2/Group 8/students/Pauline Hengst/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Exploring effectivity of Hm landmark extraction on modern planning domains"
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:80265ee3-58f4-4afb-964f-ffc9d8906ada?collection=education'
 firstName: Pauline
 lastName: Hengst
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/PaulTervoort/SymbolicPlanners.jl-landmarks/tree/final-pauline/src/planners'
