Update Poster Arthur Jacques (Group 64)

--- a/content/posters/2024/Q4/Group 64/students/Arthur Jacques/student_info.yaml
+++ b/content/posters/2024/Q4/Group 64/students/Arthur Jacques/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Concurrency and Nondeterminism using Effects and Handlers
+thesisTitle: Concurrency with effects and handlers
 paperUrl: ''
 firstName: Arthur
 lastName: Jacques
