Add Group 77 files.

--- a/content/posters/2024/Q4/Group 77/students/Matyáš Kollert/student_info.yaml
+++ b/content/posters/2024/Q4/Group 77/students/Matyáš Kollert/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'An Investigation into Collaborative Scanners'
 paperUrl: ''
 firstName: Matyáš
 lastName: Kollert
-repositoryUrl: 'https://github.com/jeltjongsma/detecting-collaborative-scanners'
+repositoryUrl: ''
