--- a/content/posters/2024/Q4/Group 5/students/Andra Alazaroaie/student_info.yaml
+++ b/content/posters/2024/Q4/Group 5/students/Andra Alazaroaie/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: The Many Faces of AI Art: Self-Poisoning Generative Models
 paperUrl: ''
 firstName: Andra
 lastName: Alazaroaie
-repositoryUrl: ''
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Lukina/aalazaroaie-The-Many-Faces-of-AI-Art'
