Update group 61 files.

--- a/content/posters/2024/Q4/Group 61/students/Marin Alexandru Remus/student_info.yaml
+++ b/content/posters/2024/Q4/Group 61/students/Marin Alexandru Remus/student_info.yaml
@@ -1,5 +1,4 @@
-thesisTitle: Exploring Pre-trained Models for Comparative Analysis of
-  Scanned Historical Watermarks
+thesisTitle: Pre-trained Models on Scanned Historic Watermarks
 paperUrl: ''
 firstName: Marin Alexandru
 lastName: Remus
