Update Group 68 files

--- a/content/posters/2024/Q4/Group 68/students/Dido Dimitrov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Dido Dimitrov/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Accelerating hyperbolic t-SNE Quadtree generalization for the upper
 paperUrl: ''
 firstName: Dido
 lastName: Dimitrov
-repositoryUrl: 'https://github.com/Sne4kers/hyperbolic-tsne'
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Eisemann/dhdimitrov-Approximating-Nearest-Neighbors-in-Hyperbolic-Spa.git'
