Add Group 29 files.

--- a/content/posters/2024/Q4/Group 29/students/Oana Milchi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 29/students/Oana Milchi/student_info.yaml
@@ -1,4 +1,5 @@
 thesisTitle: 'Modified GNN-SubNet: leveraging local versus global Graph Neural Network  explanations for disease subnetwork detection'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:f90541b8-232b-47be-8470-d79b273279ae?collection=education'
 firstName: Oana
 lastName: Milchi
 repositoryUrl: 'https://github.com/Oana-M03/GNN-SubNet_modified'
