--- a/content/posters/2024/Q4/Group 29/students/Tim Stols/student_info.yaml
+++ b/content/posters/2024/Q4/Group 29/students/Tim Stols/student_info.yaml
@@ -1,3 +1,4 @@
 thesisTitle: Influence of molecular structures on graph neural network explainers’ performance
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:f90541b8-232b-47be-8470-d79b273279ae?collection=education'
 firstName: Tim
 lastName: Stols
