Update Group 68 files

--- a/content/posters/2024/Q4/Group 68/students/Milan Otten/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Milan Otten/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Accelerating Hyperbolic t-SNE using the Lorentz Model
+thesisTitle: Accelerating t-SNE using a uniform grid-based approximation
 paperUrl: ''
 firstName: Milan
 lastName: Otten
