--- a/content/posters/2024/Q4/Group 68/students/Yehor Kozyr/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Yehor Kozyr/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Accelerating hyperbolic t-SNE in the Klein Disk model
+thesisTitle: Hyperbolic t-SNE with a Quadtree Splitting in the Cartesian Coordinate System
 paperUrl: ''
 firstName: Yehor
 lastName: Kozyr
