Update Group 24 files
Update Nils' description
Make repository URLs more specific

Co-authored-by: Nils Mikk <nilsmikk@gmail.com>

--- a/content/posters/2024/Q4/Group 24/students/Alperen Guncan/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Alperen Guncan/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'Program Synthesis from Game Rewards Using FrAngel: Finding Complex
 paperUrl: ''
 firstName: Alperen
 lastName: Guncan
-repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/frangel'
+repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/frangel-with-minerl-exploit'
