--- a/content/posters/2024/Q4/Group 24/students/Nicolae Filat/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Nicolae Filat/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'Program Synthesis from Rewards using Probe and FrAngel: Impact of 
 paperUrl: ''
 firstName: Nicolae
 lastName: Filat
-repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/dev'
+repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/exploration-vs-exploitation-in-frangel-and-probe'
