--- a/content/posters/2024/Q4/Group 24/students/Timur Mukminov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Timur Mukminov/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'Reward Based Program Synthesis for Minecraft: Adapting Program Syn
 paperUrl: ''
 firstName: Timur
 lastName: Mukminov
-repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/probe'
+repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/probe-with-minerl-exploit'
