--- a/content/posters/2024/Q4/Group 24/students/George Latsev/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/George Latsev/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'Playing Minecraft with Program Synthesis: Adapting FrAngel to Unco
 paperUrl: ''
 firstName: George
 lastName: Latsev
-repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/frangel'
+repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/frangel-with-minerl-explore'
