--- a/content/posters/2024/Q4/Group 24/students/Nils Mikk/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Nils Mikk/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Program Synthesis from Rewards with Probe: Adjusting Probe to Increase Exploration when Synthesizing Programs From Rewards in Minecraft'
+thesisTitle: 'Program Synthesis from Rewards with Probe: Adjusting Probe to Increase Exploration when Synthesising Programs from Rewards in Minecraft'
 paperUrl: ''
 firstName: Nils
 lastName: Mikk
-repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/probe'
+repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/probe-with-minerl-explore'
