Update group 28 files.

--- a/content/posters/2024/Q4/Group 28/students/Filip Molnar/student_info.yaml
+++ b/content/posters/2024/Q4/Group 28/students/Filip Molnar/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Combining the Smallest Subset o Programs from Enumerative Search with Decision Trees
+thesisTitle: Combining the Smallest Subset of Programs from Enumerative Search with Decision Trees
 paperUrl: ''
 firstName: Filip
 lastName: Molnár
