--- a/content/posters/2024/Q4/Group 28/students/Radu Nicolae/student_info.yaml
+++ b/content/posters/2024/Q4/Group 28/students/Radu Nicolae/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Efficient Program Synthesis via Anti-Unification: How do we use anti-unification to combine programs to act as a starting point for synthesis?'
+thesisTitle: 'Efficient Program Synthesis via Anti-Unification'
 paperUrl: ''
 firstName: Radu
 lastName: Nicolae
