Update Group 55 files

--- a/content/posters/2024/Q4/Group 55/group_info.yaml
+++ b/content/posters/2024/Q4/Group 55/group_info.yaml
@@ -1,4 +1,4 @@
-projectTitle: Representation Learning for Multimodal Data
+projectTitle: Relational Multi-Modal Deep Learning
 year: 2024
 supervisors:
   - Kubilay Atasu
