--- a/content/posters/2024/Q4/Group 55/students/Ilias Mc Auliffe/student_info.yaml
+++ b/content/posters/2024/Q4/Group 55/students/Ilias Mc Auliffe/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Self-Supervised Learning for Relational Multimodal Data
+thesisTitle: Self-Supervised Representation Learning for Relational Multimodal Data
 paperUrl: ''
 firstName: Ilias
 lastName: Mc Auliffe
