Update Group 78 files.

--- a/content/posters/2024/Q4/Group 78/students/Duco de Bruin/student_info.yaml
+++ b/content/posters/2024/Q4/Group 78/students/Duco de Bruin/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: 'System Call Sandboxing: Enhancing Security Through Analysis: Compa
 paperUrl: ''
 firstName: Duco
 lastName: de Bruin
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/DucodB/sparse'
