Update Group 11 files.

--- a/content/posters/2024/Q4/Group 11/students/Piotr Cichoń/student_info.yaml
+++ b/content/posters/2024/Q4/Group 11/students/Piotr Cichoń/student_info.yaml
@@ -1,5 +1,5 @@
 firstName: "Piotr"
 lastName: "Cichoń"
 thesisTitle: "Exploring the Relationship Between Bias and Speech Acoustics in Automatic Speech Recognition Systems"
-paperUrl: ""
+paperUrl: "https://repository.tudelft.nl/islandora/object/uuid%3Ae184cfe0-2861-4cdf-b0e5-3c777aa27518"
 repositoryUrl: "https://github.com/piotr-cichon/Exploring-the-Relationship-Between-Bias-and-Speech-Acoustics-in-Automatic-Speech-Recognition-Systems"
