Update Group 41 files.

--- a/content/posters/2024/Q4/Group 41/students/Henry Page/student_info.yaml
+++ b/content/posters/2024/Q4/Group 41/students/Henry Page/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Addressing Statistical Heterogeneity through Generative Similarity-Based Comparison in Federated Learning
-paperUrl: 'https://pure.tudelft.nl/admin/files/211187553/Page_Henry_Thesis_Federated_Learning.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:7da21d5d-15cb-4806-b675-04ccfc394487'
 firstName: Henry
 lastName: Page
 repositoryUrl: 'https://github.com/FederatedRP2024Delft/Federated-Learning-PyTorch-Weight-Modification'
