--- a/content/posters/2024/Q4/Group 41/students/Lohithsai Yadala Chanchu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 41/students/Lohithsai Yadala Chanchu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effect of Different Data Augmentation Strategies on Performance In Federated Learning Systems
-paperUrl: 'https://pure.tudelft.nl/admin/files/211128622/RP_Paper-7.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:11946811-3752-4201-96f1-b0abd9cdc9dd'
 firstName: Lohithsai
 lastName: Yadala Chanchu
 repositoryUrl: ''
