--- a/content/posters/2024/Q4/Group 41/students/Matei Tudor Ivan/student_info.yaml
+++ b/content/posters/2024/Q4/Group 41/students/Matei Tudor Ivan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Benchmark of Concept Shift Impact on Federated Learning Models
-paperUrl: 'https://pure.tudelft.nl/admin/files/211190592/final_paper_mivan_.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:6f862841-d35c-438f-bab2-ef7f13b3fb68'
 firstName: Matei Tudor
 lastName: Ivan
 repositoryUrl: 'https://github.com/mateimone/concept_shift_rp'
