--- a/content/posters/2024/Q4/Group 41/students/Pil Kyu Cho/student_info.yaml
+++ b/content/posters/2024/Q4/Group 41/students/Pil Kyu Cho/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Enhancing Federated Models with Synthetic Data
-paperUrl: 'https://pure.tudelft.nl/admin/files/211132187/research_paper.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:66e1dac4-ed87-4e0e-a47c-fdea32b85686'
 firstName: Pil Kyu
 lastName: Cho
 repositoryUrl: 'https://github.com/FederatedRP2024Delft/GenFL'
