Add Group 79 files.

--- a/content/posters/2024/Q4/Group 79/students/Vlad Nitu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 79/students/Vlad Nitu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Investigating the Amplification Potential of Common UDP-Based Protocols in DDoS Attacks across Belgium and Luxembourg'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:ec9c38a7-6599-4fb9-b508-3f025c5eade8'
 firstName: Vlad
 lastName: Nitu
 repositoryUrl: 'https://github.com/vlad-nitu/AmplificationAttacksInTheWild_BE_LU'
