Add Group 79 files.

--- a/content/posters/2024/Q4/Group 79/students/Piotr Politowicz/student_info.yaml
+++ b/content/posters/2024/Q4/Group 79/students/Piotr Politowicz/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Amplification Detection: Determining DDoS Abuse Potential of Your Network'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:f6454958-361f-4a48-b6ca-7de72a768c3d'
 firstName: Piotr
 lastName: Politowicz
 repositoryUrl: 'https://github.com/pwicz/research-project-amplification-attacks'
