Update Group 12 files

--- a/content/posters/2024/Q4/Group 12/students/Glebs Labunskis/student_info.yaml
+++ b/content/posters/2024/Q4/Group 12/students/Glebs Labunskis/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Virtual Coaching for Smoking Cessation: What are Users Preference in Ethical Principles for Human Feedback Allocation'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:61208573-d904-4375-8c1c-0e0382df86b8'
 firstName: Glebs
 lastName: Labunskis
 repositoryUrl: ''
