--- a/content/posters/2024/Q4/Group 12/students/Jonathan van Oudheusden/student_info.yaml
+++ b/content/posters/2024/Q4/Group 12/students/Jonathan van Oudheusden/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analyzing users' introductions to human coaches
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:dac0c377-6e2b-4d0c-8273-7404568e58c3'
 firstName: Jonathan
 lastName: van Oudheusden
 repositoryUrl: ''
