--- a/content/posters/2024/Q4/Group 12/students/Yoan Naydenov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 12/students/Yoan Naydenov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Users’ attitude towards adding human feedback when preparing for quitting smoking/vaping with a virtual coach: A mixed-methods analysis'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:4d0e49fc-e645-4e9c-9ae8-e04f21445f77'
 firstName: Yoan
 lastName: Naydenov
 repositoryUrl: ''
