Update Group 69 files

--- a/content/posters/2024/Q4/Group 69/students/Joshua B. Slik/student_info.yaml
+++ b/content/posters/2024/Q4/Group 69/students/Joshua B. Slik/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effect of Facial Realism on Presence in Collaborative Virtual Environments
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:75923d4c-fdd2-493e-ab3c-d14bf7cf66a8'
 firstName: Joshua B.
 lastName: Slik
 repositoryUrl: 'https://github.com/JoshCode/thesis-vr-presence-2024'
