--- a/content/posters/2024/Q4/Group 69/students/Stiliyan Nanovski/student_info.yaml
+++ b/content/posters/2024/Q4/Group 69/students/Stiliyan Nanovski/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Matching gestures on word-gesture keyboards in VR with Bézier curves
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:a70c67e8-218f-4c46-b800-07ee55fd3921'
 firstName: Stiliyan
 lastName: Nanovski
 repositoryUrl: 'https://github.com/snanovski/bezier-word-gesture-keyboard'
