--- a/content/posters/2024/Q4/Group 69/students/Timothy Zonnenberg/student_info.yaml
+++ b/content/posters/2024/Q4/Group 69/students/Timothy Zonnenberg/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Reducing lag in a distributed physics system through ahead-of-time simulation: An initial implementation'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:8c6bb8e5-e00b-4437-b5d1-cf8c15e79482'
 firstName: Timothy
 lastName: Zonnenberg
 repositoryUrl: 'https://github.com/timzonb/bachelor-reducing-lag'
