Add 4 of 5 repo links

--- a/content/posters/2024/Q4/Group 61/students/Anna Lantink/student_info.yaml
+++ b/content/posters/2024/Q4/Group 61/students/Anna Lantink/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Binarization of Historical Watermarks: A Review of Thresholding Techniques Applied to Historical Watermark Images"
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:927b791a-7d37-44ed-912c-69c2ef61e9f3'
 firstName: Anna
 lastName: Lantink
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Castaneda/alantink-Automated-processing-of-scanned-historic-watermar'
