--- a/content/posters/2024/Q4/Group 61/students/Sydney Kho/student_info.yaml
+++ b/content/posters/2024/Q4/Group 61/students/Sydney Kho/student_info.yaml
@@ -1,6 +1,5 @@
 thesisTitle: "A Comparison of Feature Extraction Techniques for Binarized Content-Based Image Retrieval"
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:28a6143d-94de-481c-82b8-1811f0051b80'
 firstName: Sydney
 lastName: Kho
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Castaneda/sydneykho-Automated-processing-of-scanned-historic-watermar'
-https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Castaneda/sydneykho-Automated-processing-of-scanned-historic-watermar
