Update Groud 26 files

--- a/content/posters/2024/Q4/Group 26/students/Rok Štular/student_info.yaml
+++ b/content/posters/2024/Q4/Group 26/students/Rok Štular/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Survey on Distributed Tiny Machine
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:40f29059-5e59-4ce2-b904-38506fb9115c'
 firstName: Rok
 lastName: Štular
 repositoryUrl: ''
