Add Group 40 Paper URLs.

--- a/content/posters/2024/Q4/Group 40/students/Kieran McAlpine/student_info.yaml
+++ b/content/posters/2024/Q4/Group 40/students/Kieran McAlpine/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Using Causal Multi-task Gaussian Process to estimate the individualized treatment effect of a low vs high PEEP regime on ICU patients
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A06fe7050-9982-4624-902f-e9007331a490?collection=education'
 firstName: Kieran
 lastName: McAlpine
 repositoryUrl: ''
