--- a/content/posters/2024/Q4/Group 40/students/Petru Anica-Popa/student_info.yaml
+++ b/content/posters/2024/Q4/Group 40/students/Petru Anica-Popa/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Optimizing Mechanical Ventilation Support for Patients in Intensive Care Units
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A7779f26f-ff42-4bfe-961e-3f04c81f866c?collection=education'
 firstName: Petru
 lastName: Anica-Popa
 repositoryUrl: 'https://github.com/petruanica/cse3000-research-project'
