--- a/content/posters/2024/Q4/Group 40/students/Juul Schnitzler/student_info.yaml
+++ b/content/posters/2024/Q4/Group 40/students/Juul Schnitzler/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Personalizing Treatment for Intensive Care Unit Patients with Acute Respiratory Distress Syndrome"
-paperUrl: 'https://pure.tudelft.nl/admin/files/211196098/CSE3000_Research_Project_Final_Paper.pdf'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Acea1efe0-db2c-4f5d-97f3-464b0bf533aa?collection=education'
 firstName: Juul
 lastName: Schnitzler
 repositoryUrl: 'https://github.com/JuulSchnitzler/Estimating-CATE-using-the-meta-learners'
