Update Group 34 files

--- a/content/posters/2024/Q4/Group 34/students/Angelika Mentzelopoulou/student_info.yaml
+++ b/content/posters/2024/Q4/Group 34/students/Angelika Mentzelopoulou/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Reducing LLM Hallucinations with Retrieval Prompt Engineering
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:c5176a21-c793-4eea-8893-87d151b8bfe7'
 firstName: Angelika
 lastName: Mentzelopoulou
 repositoryUrl: 'https://github.com/angelikamentz/BSc-Thesis-LLM-Hallucination/tree/release'
