--- a/content/posters/2024/Q4/Group 34/students/Mattheo de Wit/student_info.yaml
+++ b/content/posters/2024/Q4/Group 34/students/Mattheo de Wit/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Leveraging E2E Test Context for LLM-Enhanced Test Data and Descriptions
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:1e40dd90-0b18-40c3-96fd-6944c02a62e7'
 firstName: Mattheo
 lastName: de Wit
 repositoryUrl: ''
