--- a/content/posters/2024/Q4/Group 34/students/Ismael Zaidi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 34/students/Ismael Zaidi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Readability Driven Test Selection
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:377ba5c9-0a16-4078-b165-77200bf5454f'
 firstName: Ismaël
 lastName: Zaidi
 repositoryUrl: ''
