Update Group 70 files.

--- a/content/posters/2024/Q4/Group 70/students/Dan Savastre/student_info.yaml
+++ b/content/posters/2024/Q4/Group 70/students/Dan Savastre/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Temporal Dynamics in Human Pose Estimation Models
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:acfe6dba-4b09-47e9-a06e-ac25fd5ce702?collection=education'
 firstName: Dan
 lastName: Savastre
 repositoryUrl: 'https://github.com/dansavastre/MARS_LSTM'
