--- a/content/posters/2024/Q4/Group 70/students/Kevin Hoxha/student_info.yaml
+++ b/content/posters/2024/Q4/Group 70/students/Kevin Hoxha/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Exploring the Spatial Characteristics of MARS: Assessing the Impact of Neural Net Depth Increase and PointNet Architecture Integration on MARS Performance'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:745cde3c-b8e4-4f4e-8832-2a29745ba4ae?collection=education'
 firstName: Kevin
 lastName: Hoxha
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/kevinhoxhaa/MARS-depth'
