Update Group 74 files

--- a/content/posters/2024/Q4/Group 74/students/Gareth Kit/student_info.yaml
+++ b/content/posters/2024/Q4/Group 74/students/Gareth Kit/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Forecasting in Online Caching
-paperUrl: ''
+paperUrl: ' http://resolver.tudelft.nl/uuid:89d1dd00-1a11-45b5-b800-9a892fa37c3b'
 firstName: Gareth
 lastName: Kit
 repositoryUrl: 'https://github.com/MiniGareth/Forecasting-in-Online-Caching'
