--- a/content/posters/2024/Q4/Group 74/students/Lucian Tosa/student_info.yaml
+++ b/content/posters/2024/Q4/Group 74/students/Lucian Tosa/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Optimistic Discrete Caching with Switching Costs
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:81af2a4e-7d1d-44bb-a0a4-70024a96458d'
 firstName: Lucian
 lastName: Tosa
 repositoryUrl: ''
