--- a/content/posters/2024/Q4/Group 74/students/Robert Vadastreanu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 74/students/Robert Vadastreanu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Online Learning for Caching with Heterogeneous miss-costs
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:ad65a338-3488-4df2-9af1-eb59bce9a9c9'
 firstName: Robert
 lastName: Vadastreanu
 repositoryUrl: ''
