Update paper urls

--- a/content/posters/2024/Q4/Group 25/students/Dan-Cristian Ciacu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 25/students/Dan-Cristian Ciacu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The Impact of the Retrieval Stage in Interpolation-based Re-Ranking
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:d04e998a-9afe-48b1-9e29-091aa49f0f0f'
 firstName: Dan-Cristian
 lastName: Ciacu
 repositoryUrl: 'https://github.com/cristianciacu1/neural_ranking_models'
