--- a/content/posters/2024/Q4/Group 31/students/Razvan Loghin/student_info.yaml
+++ b/content/posters/2024/Q4/Group 31/students/Razvan Loghin/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Communicating trust-based beliefs and decisions in human-AI teams: The impact of textual summary of changes of the artificial agent''s mental model on the human teammate''s trust in the agent and overall satisfaction'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:5e0b000a-2f5c-49ac-b66d-59104d15942f'
 firstName: Razvan
 lastName: Loghin
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Tielman_Jorge/rloghin-Communicating-trust-based-beliefs-and-decisions-i'
