--- a/content/posters/2024/Q4/Group 31/students/Sahar Marossi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 31/students/Sahar Marossi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Communicating Trust-based Beliefs and Decisions in Human-AI Teams using Visual Summaries of Explanations
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:755ef51e-b559-4d79-864b-30f3f5bd2e32'
 firstName: Sahar
 lastName: Marossi
 repositoryUrl: 'https://github.com/explore'
