Update Group 77 files.

--- a/content/posters/2024/Q4/Group 77/students/Andrei Ionescu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 77/students/Andrei Ionescu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Collaborative Scanners Using Clustering Methods
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:8b418b44-0c79-4d96-805f-edcb0f1312e6'
 firstName: Andrei
 lastName: Ionescu
 repositoryUrl: ''
