--- a/content/posters/2024/Q4/Group 77/students/Matyáš Kollert/student_info.yaml
+++ b/content/posters/2024/Q4/Group 77/students/Matyáš Kollert/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'An Investigation into Collaborative Scanners'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:5271c8c8-497b-434b-b75b-83eedfd16f78'
 firstName: Matyáš
 lastName: Kollert
 repositoryUrl: ''
