--- a/content/posters/2024/Q4/Group 45/students/Lubov Chalakova/student_info.yaml
+++ b/content/posters/2024/Q4/Group 45/students/Lubov Chalakova/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Effects of time discretization on unconstrained Spiking Neural Networks: How does time-discretization affect training convergence rate in spike-based backpropagation as opposed to backpropagation through time?'
-paperUrl: ''
+thesisTitle: 'Adapting unconstrained spiking neural networks to explore the effects of time discretization on network properties: The effects of time-discretization on spike-based backpropagation as opposed to membrane-potential backpropagation'
+paperUrl: 'http://resolver.tudelft.nl/uuid:3f18912c-74ba-42a6-88fb-656e794caf31'
 firstName: Lubov
 lastName: Chalakova
 repositoryUrl: 'https://github.com/lubovCh/slayerPytorch'
