--- a/content/posters/2024/Q4/Group 45/students/Zheija Hu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 45/students/Zheija Hu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Adapting unconstrained spiking neural networks to explore effects of time discretization on network properties: Correlation between step size and accuracy for real world task'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:44aeae14-36fd-42f5-86f5-17fe7d66d850'
 firstName: Zheija
 lastName: Hu
 repositoryUrl: 'https://github.com/ZhejiaHu/bats-torch'
