--- a/content/posters/2024/Q4/Group_17/students/Wouter Breedveld/student_info.yaml
+++ b/content/posters/2024/Q4/Group_17/students/Wouter Breedveld/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 
+thesisTitle: Comparing schedule generation of VSIDS against CPRU for RCPSP-t solvers
 paperUrl: ''
 firstName: Wouter
 lastName: Breedveld
