Update Group 27 Files

--- a/content/posters/2024/Q4/Group 27/students/Adina Dobrinoiu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 27/students/Adina Dobrinoiu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Leveraging Large Language Models for Classifying Subjective Arguments in Public Discourse
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:4e6354e7-69c3-45d0-adda-e10fea9b9d54'
 firstName: Adina
 lastName: Dobrinoiu
 repositoryUrl: 'https://github.com/adina-dobrinoiu/Argument_Extraction'
