--- a/content/posters/2024/Q4/Group 27/students/Joosje Gorter/student_info.yaml
+++ b/content/posters/2024/Q4/Group 27/students/Joosje Gorter/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Leveraging LLMs for subjective value detection in argument statements
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:66e6c631-3ecd-4742-ac8f-97e76e2716bc'
 firstName: Joosje
 lastName: Gorter
 repositoryUrl: 'https://github.com/JGorter/Leveraging-LLMs-for-value-detection'
