--- a/content/posters/2024/Q4/Group 27/students/Timur Oberhuber/student_info.yaml
+++ b/content/posters/2024/Q4/Group 27/students/Timur Oberhuber/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Decoding Sentiment with Large Language Models
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:ee47b8c2-1bb3-44a8-883b-3bca0ee13097'
 firstName: Timur
 lastName: Oberhuber
 repositoryUrl: 'https://github.com/Timur-O/Research-Project'
