Update Group 44 files

--- a/content/posters/2024/Q4/Group 44/students/Miloš Ristić/student_info.yaml
+++ b/content/posters/2024/Q4/Group 44/students/Miloš Ristić/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Correct-by-Construction Type-Checking for Algebraic Data Types: Implementing a Type-Checker in Agda'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:91825f78-d97c-47ed-b0f1-7ce498e523d1'
 firstName: Miloš
 lastName: Ristić
 repositoryUrl: 'https://github.com/MilosRistic02/cbc-adt-type-checker'
