--- a/content/posters/2024/Q4/Group 44/students/Mariusz Kicior/student_info.yaml
+++ b/content/posters/2024/Q4/Group 44/students/Mariusz Kicior/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'An Exceptional Type-Checker: Advancing Type-Checker Reliability with the Correct-by-Construction Approach for a Toy Language with Checked Exceptions'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:10a1fd27-a7fc-427c-904b-2787427e18d3'
 firstName: Mariusz
 lastName: Kicior
 repositoryUrl: 'https://github.com/kmariuszk/cbc-type-checker'
