--- a/content/posters/2024/Q4/Group 44/students/Vincent Pikand/student_info.yaml
+++ b/content/posters/2024/Q4/Group 44/students/Vincent Pikand/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Eliminating bugs in type inference algorithms by describing them with precise types: An evaluation of Correct-by-Construction programming in Agda for bug-free type inferencealgorithms'
-paperUrl: ''
+thesisTitle: 'Eliminating bugs in type inference algorithms by describing them with precise types'
+paperUrl: 'http://resolver.tudelft.nl/uuid:001da32e-7623-43db-b7dd-2cd54a366b00'
 firstName: Vincent
 lastName: Pikand
 repositoryUrl: 'https://github.com/VincentPikand/cbc-type-checker'
